# pyside-yolov10

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  justfile  main.py  pyproject.toml  requirements.txt  resources.qrc  resources_rc.py  train.py
app/: core.py
app/utils/: onnx_models.py  predict.py  yolov10.py
app/views/: main.py
app/widgets/: main.ui  main_ui.py
notebook/: obb.ipynb
scripts/: build-test.bat  build.bat
tools/: compile_qt.py  show_dataset.py
yolo_ui/: core.py
yolo_ui/config/: __init__.py
yolo_ui/utils/: onnx_deploy.py  onnx_models.py  predict.py
yolo_ui/views/: main.py
yolo_ui/widgets/: main.ui  main_ui.py
